--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.8.1
+crispy-bootstrap4==2024.10
 Django==3.1.12
 django-crispy-forms==1.10.0
-djongo==1.3.6
+djongo==1.3.7
 dnspython==2.7.0
-pymongo==3.12.3
+pymongo==3.11.4
 python-decouple==3.8
+pytz==2024.2
+setuptools==75.8.0
 sqlparse==0.2.4
 tzdata==2024.2
